fix font-size and image dimensions on mobile sizes

--- a/src/App.css
+++ b/src/App.css
@@ -357,6 +357,14 @@ section.allready-participated {
   font-size: 26px;
   text-align: center;
 
+  h1 {
+    @media (max-width: 1024px) {
+      font-size: 32px;
+      line-height: 40px;
+      letter-spacing: -0.24px;
+    }
+  }
+
   @media (max-width: 1024px) {
     font-size: 16px;
     line-height: 24px;
